force-app/main/default/objects/Conversation_Note__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account the conversation note if related to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversation Notes</relationshipLabel>
    <relationshipName>Conversation_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>