force-app/main/default/objects/Conversation_Note__c/fields/CRM_Case__c.field-meta.xml
<CustomField>
    <fullName>CRM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If conversation note is related to i.e. an inbound call case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Conversation Notes</relationshipLabel>
    <relationshipName>Conversation_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>