force-app/main/default/objects/Conversation_Note__c/fields/CRM_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>CRM_Communication_Channel__c</fullName>
    <description>Defines if the note was written based on a phone conversation, physical meeting etc.</description>
    <label>Communication Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
                <default>true</default>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>