force-app/main/default/objects/Conversation_Note__c/fields/CRM_Conversation_Note__c.field-meta.xml
<CustomField>
    <fullName>CRM_Conversation_Note__c</fullName>
    <description>Contains the actual written note of the conversation.</description>
    <label>Conversation Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>