force-app/main/default/objects/Conversation_Note__c/fields/CRM_Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>CRM_Date_Registered__c</fullName>
    <description>Defines the date the note was shared with the user</description>
    <label>Date Registered</label>
    <type>Date</type>
</CustomField>