force-app/main/default/objects/Conversation_Note__c/fields/CRM_Date_Time_Registered__c.field-meta.xml
<CustomField>
    <fullName>CRM_Date_Time_Registered__c</fullName>
    <description>Date and time the conversation note was registered.</description>
    <label>Date Time Registered</label>
    <type>DateTime</type>
</CustomField>