force-app/main/default/objects/Conversation_Note__c/fields/CRM_Henvendelse_BehandlingsId__c.field-meta.xml
<CustomField>
    <fullName>CRM_Henvendelse_BehandlingsId__c</fullName>
    <externalId>true</externalId>
    <label>Henvendelse BehandlingsId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>