force-app/main/default/objects/Conversation_Note__c/fields/CRM_Is_Redacted__c.field-meta.xml
<CustomField>
    <fullName>CRM_Is_Redacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Redacted</label>
    <type>Checkbox</type>
</CustomField>