force-app/main/default/objects/Conversation_Note__c/fields/CRM_Journal_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Status_Formula__c</fullName>
    <description>Displays and icon depending on the journal status of the conversation note.</description>
    <formula>CASE(CRM_Journal_Status__c,
					&apos;Journal Completed&apos;, IMAGE(&apos;/logos/Custom/Circle_Green/logo.png&apos;, &apos;Journalført&apos;, 24,24)+ &apos; Journalført&apos;,
					&apos;Journal Started&apos;, IMAGE(&apos;/logos/Custom/Circle_Grey/logo.png&apos;, &apos;Journalført&apos;, 24,24)+ &apos; Ikke journalført&apos;,
					&apos;Journal Error&apos;, IMAGE(&apos;/logos/Custom/Circle_Red/logo.png&apos;, &apos;Journalføring feilet&apos;, 24, 24)+ &apos; Journalføring feilet&apos;,
					IMAGE(&apos;/logos/Custom/Circle_Grey/logo.png&apos;, &apos;Ikke journalført&apos;, 24, 24) + &apos; Ikke journalført&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Status</label>
    <type>Text</type>
</CustomField>