force-app/main/default/objects/Conversation_Note__c/fields/CRM_Journal_Status_Formula_Icons__c.field-meta.xml
<CustomField>
    <fullName>CRM_Journal_Status_Formula_Icons__c</fullName>
    <formula>CASE(CRM_Journal_Status__c,
        &apos;Journal Completed&apos;, IMAGE(&apos;/resource/circles/circle_green.svg&apos;,
        &apos;Journalført&apos;, 15,15)+ &apos; Journalført&apos;,
        &apos;Journal Started&apos;, IMAGE(&apos;/resource/circles/circle_grey.svg&apos;,
        &apos;Journalført&apos;, 15,15)+ &apos; Ikke journalført&apos;,
        &apos;Journal Error&apos;, IMAGE(&apos;/resource/circles/circle_red.svg&apos;,
        &apos;Journalføring feilet&apos;, 15,15)+ &apos; Journalføring feilet&apos;,
        IMAGE(&apos;/resource/circles/circle_grey.svg&apos;, &apos;Ikke journalført&apos;, 15,15) +
        &apos; Ikke journalført&apos;
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Status</label>
    <type>Text</type>
</CustomField>