force-app/main/default/objects/Conversation_Note__c/fields/CRM_Legacy_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Legacy_Case_Id__c</fullName>
    <description>The related arkivsaksnummer if the conversation note was journaled through Henvendelse.</description>
    <externalId>true</externalId>
    <label>Legacy Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>