force-app/main/default/objects/Conversation_Note__c/fields/CRM_Number_of_API_Retries__c.field-meta.xml
<CustomField>
    <fullName>CRM_Number_of_API_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the number of retries that has been performed to post this record to
        Henvendelse via API</description>
    <label>Number of API Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>