force-app/main/default/objects/Conversation_Note__c/fields/CRM_Office_Restriction_Activated_By__c.field-meta.xml
<CustomField>
    <fullName>CRM_Office_Restriction_Activated_By__c</fullName>
    <description>NAV ident of the user activating the office restriction for the record</description>
    <externalId>true</externalId>
    <label>Office Restriction Activated By</label>
    <length>7</length>
    <type>Text</type>
</CustomField>