force-app/main/default/objects/Conversation_Note__c/fields/CRM_Office_Restriction_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Office_Restriction_Date__c</fullName>
    <description>Date and time when the office restriction was activated.</description>
    <label>Office Restriction Date</label>
    <type>DateTime</type>
</CustomField>