force-app/main/default/objects/Conversation_Note__c/fields/CRM_Original_Person_GT__c.field-meta.xml
<CustomField>
    <fullName>CRM_Original_Person_GT__c</fullName>
    <description>The persons GT (Geografisk tilhørighet) when the conversation note was created. Used for office restriction functionality.</description>
    <label>Original Person GT</label>
    <length>6</length>
    <type>Text</type>
</CustomField>