force-app/main/default/objects/Conversation_Note__c/fields/CRM_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Read_Date__c</fullName>
    <description>Defines the moment the conversation note is marked as read.</description>
    <label>Read Date</label>
    <type>DateTime</type>
</CustomField>