force-app/main/default/objects/Conversation_Note__c/fields/CRM_Redaction_Activated_By__c.field-meta.xml
<CustomField>
    <fullName>CRM_Redaction_Activated_By__c</fullName>
    <description>NAV ident of the user who activated redaction on the record.</description>
    <externalId>true</externalId>
    <label>Last Edited By</label>
    <length>48</length>
    <type>Text</type>
</CustomField>