force-app/main/default/objects/Conversation_Note__c/fields/CRM_Sent__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sent__c</fullName>
    <description>Resolves to true if the conversation note has successfully been sent to
        Henvendelse.</description>
    <formula>NOT(ISBLANK(CRM_Henvendelse_BehandlingsId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>