force-app/main/default/objects/Conversation_Note__c/fields/CRM_Subtheme__c.field-meta.xml
<CustomField>
    <fullName>CRM_Subtheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Common code reference to behandlingstema.</description>
    <label>Subtheme</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invalid value for chosen theme.</errorMessage>
        <filterItems>
            <field>Common_Code__c.CRM_Code_Set__c</field>
            <operation>equals</operation>
            <value>Behandlingstema</value>
        </filterItems>
        <filterItems>
            <field>Common_Code__c.CRM_Parent_Code__c</field>
            <operation>equals</operation>
            <valueField>$Source.CRM_Theme__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Common_Code__c</referenceTo>
    <relationshipLabel>Conversation Notes (Subtheme)</relationshipLabel>
    <relationshipName>CRM_Conversation_Notes_Subtheme</relationshipName>
    <type>Lookup</type>
</CustomField>