force-app/main/default/objects/Conversation_Note__c/fields/CRM_Subtheme_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Subtheme_Name__c</fullName>
    <formula>CRM_Subtheme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtheme Name</label>
    <type>Text</type>
</CustomField>