force-app/main/default/objects/Conversation_Note__c/fields/CRM_Theme_Code__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Code__c</fullName>
    <formula>CRM_Theme__r.CRM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Code</label>
    <type>Text</type>
</CustomField>