force-app/main/default/objects/Conversation_Note__c/fields/CRM_Theme_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Name__c</fullName>
    <description>Display name for the related theme from common code</description>
    <formula>CRM_Theme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Name</label>
    <type>Text</type>
</CustomField>