force-app/main/default/objects/Conversation_Note__c/fields/INT_PersonIdent__c.field-meta.xml
<CustomField>
    <fullName>INT_PersonIdent__c</fullName>
    <label>Person Ident</label>
    <length>20</length>
    <type>Text</type>
</CustomField>