force-app/main/default/objects/Conversation_Note__c/fields/Redaction_Progress__c.field-meta.xml
<CustomField>
    <fullName>Redaction_Progress__c</fullName>
    <description>Free text field to add information about redaction.</description>
    <label>Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>