force-app/main/default/objects/Conversation_Note__c/fields/STO_Sensitive_Information_Activated_By__c.field-meta.xml
<CustomField>
    <fullName>STO_Sensitive_Information_Activated_By__c</fullName>
    <description>NAV ident of the user activating the Sensitive Information for the record.</description>
    <label>Sensitive Information Activated By</label>
    <length>7</length>
    <type>Text</type>
</CustomField>