force-app/main/default/objects/Conversation_Note__c/fields/STO_Sensitive_Information_Unit__c.field-meta.xml
<CustomField>
    <fullName>STO_Sensitive_Information_Unit__c</fullName>
    <description>NAV unit that has activated Sensitive Information.</description>
    <label>Sensitive Information Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>